# App

./: .gitignore  .npmrc  .prettierignore  .timetracker  CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  action.yml  crowdin.yml  drizzle.config.ts  eslint.config.js  llms-full.txt  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.cjs  renovate.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.changeset/: brown-zoos-attack.md  config.json  cyan-vans-knock.md  fifty-seals-remain.md  gold-badgers-switch.md  nasty-monkeys-fetch.md  nine-spies-itch.md  quick-hornets-design.md  rare-falcons-sin.md  silent-donuts-boil.md  three-cooks-remember.md  weak-fans-invent.md
.github/: dependabot.yml  renovate.json
.github/actions/tauri/: action.yml
.github/reusable-steps/: action.yml
.github/workflows/: build.yml  changesets.yml  cleanup.yml  format.yml  release-test.yml  release.yml  semantic-release.yml  tauri.yml
docs/cli/: llms.txt
docs/kit/: llms.txt
docs/svelte/: llms.txt
messages/: af.json  ar.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  he.json  hu.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sr.json  sv.json  tr.json  uk.json  vi.json  vidstack.URL  zh.json
project.inlang/: settings.json
scripts/: bump.js  release.js
src/: app.css  app.html  hooks.client.ts
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.portable.windows.conf.json  tauri.windows.conf.json  tauri.windows.conf.test.json
src-tauri/capabilities/: default.json  desktop.json  tmdb-auth.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_jittery_nightcrawler.sql  0000_round_romulus.sql  0001_faulty_titanium_man.sql  0001_thick_iron_man.sql  0002_curly_tombstone.sql  0002_glorious_wonder_man.sql  0003_eager_hemingway.sql  0003_kind_peter_quill.sql  0004_cultured_mimic.sql  0004_refactor_settings_client_init.sql  0005_useful_johnny_storm.sql  0006_huge_namorita.sql  0007_colorful_luckman.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
src-tauri/src/: lib.rs  main.rs  migrations.rs
src/lib/: Navbar.svelte  ProgressBar.svelte  db.ts  image.ts  index.ts  log.ts  navbar.svelte  networkStatus.ts  sessionStorage.ts  store.ts  stores.svelte.ts  stores.ts  themeUtils.ts  tmdb.ts  trpc.ts  types.ts  updater.svelte  utils.ts  videoplayer.svelte
src/lib/SVG/: Bookmark.svelte  Close.svelte  FolderAdd.svelte  FolderOpen.svelte  back.svelte  before.svelte  fullscreen.svelte  index.ts  loudness.svelte  movie.svelte  paused.svelte  pictureInPicture.svelte  play.svelte  reset.svelte  search.svelte  tv.svelte
src/lib/add/: dnd.svelte  fileScanner.ts  findEpisodes.ts  imageLoader.ts  index.ts  loader.ts  mediaService.ts  movieAdder.ts  search.ts  searchStatusUtils.ts  select.ts  serieAdder.ts  types.ts  utils.ts
src/lib/assets/SVG/: ArrowPath.svelte  BookmarkSlash.svelte  ExternalLink.svelte  Eye.svelte  EyeSlash.svelte  InfoCircle.svelte  PencilSquare.svelte  Trash.svelte  index.ts  noImage.ts  tv.svelte
src/lib/components/: ContextMenu.svelte  Navbar.svelte  ProgressBar.svelte  card.svelte  rating.svelte  updater.svelte
src/lib/css/: md.css
src/lib/db/: database.ts  funktion.ts  migrate.ts  schema.ts  update.ts
src/lib/db/schema/: actors.ts  backup.ts  collections.ts  episode.ts  index.ts  movies.ts  season.ts  serie.ts  settings.ts
src/lib/discord/: index.ts
src/lib/i18n/: index.ts  plyr.URL
src/lib/i18n/locales/: af.json  ar.json  ca.json  cs.json  da.json  de.json  default.json  el.json  en.json  es.json  fi.json  fr.json  he.json  hu.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  sr.json  sv.json  tr.json  uk.json  vi.json  zh.json
src/lib/image/: Img.svelte  image.ts
src/lib/load/: loadUtils.ts
src/lib/player/: Plyr.svelte  Vidstack.svelte  index.ts  videoUtils.ts  videoplayer.svelte
src/lib/schema/: settings.ts
src/lib/toast/: toast.svelte  toast.ts
src/lib/types/: actor.ts  add.ts  authentication.ts  cardscale.ts  collection.ts  episode.ts  media_type.ts  movie.ts  searchMovie.ts  season.ts  settings.ts  tv.ts  watchlist.ts
src/lib/types/tv/: episode.ts  season.ts  tv.ts
src/lib/utils/: appInit.ts  authentication.ts  autoBackup.ts  backup.ts  card.svelte  cardscale.ts  discord.ts  is.ts  loadUtils.ts  log.ts  networkStatus.ts  nextEpisode.ts  sentry.ts  sessionStorage.ts  telemetry.ts  themeUtils.ts  tmdb.ts  utils.ts
src/lib/utils/auth/: session.ts
src/lib/utils/db/: actor.ts  backup.ts  collection.ts  episode.ts  movie.ts  season.ts  serie.ts  settings.ts
src/lib/utils/settings/: state.ts  storage.ts
src/lib/utils/tmdb/: watchlist.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(main)/: +page.svelte  load.ts  searchIndex.ts
src/routes/[ID]/: +page.svelte
src/routes/[ID]/movie/: +page.svelte
src/routes/actor/: +page.svelte  +page.ts
src/routes/add/: +page.svelte  +page.ts
src/routes/collection/: +page.svelte  +page.ts
src/routes/episode/: +page.svelte  +page.ts
src/routes/movie/: +page.svelte  +page.ts
src/routes/season/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  backup.svelte  login.svelte  settings.svelte
src/routes/tmdb-auth/: +error.svelte  +page.svelte  +page.ts
src/routes/tv/: +page.svelte  +page.ts
src/routes/watchlist/: +page.svelte  +page.ts
src/ts/: Indexed.ts  db.ts  dir.ts  tmdb.ts
