[package]
name = "seenivers"
version = "0.1.0"
description = "A Seenivers App"
authors = ["BlackTiger007"]
homepage = "https://seenivers.com"
license = "GNU General Public License v3.0"
repository = "https://github.com/Seenivers"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seenivers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.3", features = ["protocol-asset"] }
tauri-plugin-log = "2.7.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-drpc = "0.1.6"
include_dir = "0.7.4"
sentry = "0.46.0"
sentry-log = "0.45.0"
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"

[profile.dev]
opt-level = 1          # Aktiviert ein wenig Optimierung für schnelleren Code, ohne lange Build-Zeiten.
incremental = true     # Behalte inkrementelle Builds.
debug = true           # Debug-Infos bleiben aktiv.
overflow-checks = true # Sicherheitschecks bleiben an.
lto = false            # Link-Time-Optimization für Dev unnötig.
codegen-units = 256    # Erlaubt paralleleres Kompilieren.
panic = "unwind"       # Im Dev lieber vollständige Panic-Infos.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
